# odp-embedded-controller

./: CONTRIBUTING.md  SECURITY.md
.github/workflows/: cargo-vet-pr-comment.yml  cargo-vet.yml
docs/: supply-chain.md
platform/dev-imxrt/: Cargo.toml
platform/dev-imxrt/src/: main.rs
platform/dev-imxrt/supply-chain/: audits.toml  config.toml
platform/dev-npcx/: Cargo.toml
platform/dev-npcx/src/: main.rs
platform/dev-npcx/supply-chain/: audits.toml  config.toml
platform/dev-qemu/: Cargo.toml
platform/dev-qemu/src/: main.rs
platform/dev-qemu/supply-chain/: config.toml
platform/platform-common/: Cargo.toml
platform/platform-common/src/: board.rs  lib.rs
platform/platform-common/src/mock/: battery.rs  mod.rs  thermal.rs  time_alarm.rs
platform/winhec-demo/: Cargo.toml  README.md  winhec-demo.code-workspace
platform/winhec-demo/.cargo/: config.toml
platform/winhec-demo/src/: board.rs  main.rs
platform/winhec-demo/src/fan/: mod.rs  physical_fan.rs  tachometer.rs
platform/winhec-demo/src/thermal/: mod.rs  pts.rs
